--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "posthog-js": "^1.160.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
