--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "postcss-cli": "^11.0.0",
+    "posthog-js": "^1.160.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
