--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "postcss-cli": "^11.0.0",
