--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-cli": "^11.0.0",
     "posthog-js": "^1.160.3",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
     "universal-cookie": "^7.2.0"
