--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
