--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "postcss-cli": "^11.0.0",
     "posthog-js": "^1.160.3",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
